# opendataval

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  cli.csv  configs.py  data_approach.py  data_valuation.py  datasets.py  demo.ipynb  demo_classification.ipynb  demo_nlp.ipynb  demo_regression.ipynb  feature_approach.py  launcher.py  main.py  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements.txt  run_experiment.py  setup.py  simulator.py  todo.txt  utils_eval.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/scripts/: anonymize.py
.github/workflows/: anon.yml  package.yml  prerelease.yml  static.yml  test.yml  update_coverage.yml
dataoob/: __init__.py  presets.py  util.py
dataoob/dataloader/: __init__.py  data_loader.py  data_loading.py  datasets.py  fetcher.py  loader.py  noisify.py  readme.md  register.py  util.py  utils.py
dataoob/dataloader/datasets/: __init__.py  datasets.py  nlpsets.py
dataoob/dataval/: __init__.py  api.py  dummy.py  knn_shap.py  metrics.py  readme.md
dataoob/dataval/ame/: __init__.py  ame.py
dataoob/dataval/bagging/: bagging.py
dataoob/dataval/dvrl/: __init__.py  dvrl.py  dvrlgoog.py
dataoob/dataval/influence/: __init__.py  influence.py
dataoob/dataval/knnshap/: __init__.py  knnshap.py
dataoob/dataval/loo/: __init__.py  loo.py
dataoob/dataval/margcontrib/: __init__.py  banzhaf.py  betashap.py  datashap.py  loo.py  shap.py
dataoob/dataval/oob/: __init__.py  oob.py
dataoob/dataval/shap/: __init__.py  banzhaf.py  betashap.py  datashap.py  loo.py  shap.py
dataoob/dataval/shap/datashap/: datashap.py
dataoob/evaluator/: Evaluator.py  __init__.py  api.py  eval_methods.py  evaluator.py  exper_methods.py  presets.py  readme.md  utils_eval.py
dataoob/model/: __init__.py  ann.py  api.py  bert.py  lenet.py  logistic_regression.py  mlp.py  readme.md
dataoop/dataloader/: data_loading.py
dataoop/dataval/: __init__.py  api.py  knn_shap.py  metrics.py
dataoop/dataval/bagging/: bagging_DV_core.py
dataoop/dataval/dvrl/: dvrl.py  dvrlgoog.py
dataoop/dataval/ensemble/: ensemble_DV_core.py
dataoop/model/: __init__.py  api.py  logistic_regression.py
demo/: demo.ipynb  demo_classification.ipynb  demo_embed.ipynb  demo_image.ipynb  demo_nlp.ipynb  demo_regression.ipynb  demo_val_embed.ipynb  validate_hyperparam.ipynb
docs/: Makefile  README.md  conf.py  form.rst  index.rst  leaderboards.rst  license.rst  modules.rst  opendataval.dataloader.datasets.rst  opendataval.dataloader.rst  opendataval.dataval.ame.rst  opendataval.dataval.csshap.rst  opendataval.dataval.dvrl.rst  opendataval.dataval.influence.rst  opendataval.dataval.knnshap.rst  opendataval.dataval.lava.rst  opendataval.dataval.margcontrib.rst  opendataval.dataval.oob.rst  opendataval.dataval.random.rst  opendataval.dataval.rst  opendataval.dataval.volume.rst  opendataval.experiment.rst  opendataval.model.rst  opendataval.rst  paper.rst
docs/_static/: leaderboards.css  leaderboards.js
examples/: adult_classification.ipynb  bbc-embeddings_classification.ipynb  bbc_classification.ipynb  cifar10-embeddings_classification.ipynb  custom-dataset_classification.ipynb  dataval.csv  demo.ipynb  demo_classification.ipynb  demo_embed.ipynb  demo_image.ipynb  demo_nlp.ipynb  demo_val_embed.ipynb  diabetes_regression.ipynb  imdb-embeddings_classification.ipynb  nomao_classification.ipynb  pol_classification.ipynb  readme.md  stock_regression.ipynb  validate_hyperparam.ipynb  wave_energy_regression.ipynb
opendataval/: __init__.py  __main__.py  metrics.py  presets.py  util.py
opendataval/dataloader/: __init__.py  fetcher.py  noisify.py  readme.md  register.py  util.py
opendataval/dataloader/datasets/: __init__.py  challenge.py  cleanlab.py  datasets.py  imagesets.py  nlpsets.py
opendataval/dataval/: __init__.py  api.py  readme.md
opendataval/dataval/ame/: __init__.py  ame.py
opendataval/dataval/csshap/: __init__.py  csshap.py
opendataval/dataval/dvrl/: __init__.py  dvrl.py
opendataval/dataval/influence/: __init__.py  influence.py  infsub.py
opendataval/dataval/knnshap/: __init__.py  knnshap.py
opendataval/dataval/lava/: __init__.py  lava.py  otdd.py
opendataval/dataval/lossval/: __init__.py  loss_functions.py  lossval.py
opendataval/dataval/margcontrib/: __init__.py  banzhaf.py  betashap.py  datashap.py  loo.py  sampler.py  shap.py
opendataval/dataval/oob/: __init__.py  oob.py
opendataval/dataval/random/: __init__.py  random.py
opendataval/dataval/volume/: __init__.py  rvs.py
opendataval/evaluator/: __init__.py  api.py  exper_methods.py  readme.md
opendataval/experiment/: __init__.py  api.py  exper_methods.py  readme.md  util.py
opendataval/model/: __init__.py  api.py  bert.py  grad.py  lenet.py  logistic_regression.py  mlp.py  readme.md
test/: test_dataevaluator.py  test_dataloader.py  test_dataval.py  test_evaluator.py  test_exper_methods.py  test_experiment.py  test_register.py
