[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ========================================= #
#                   PyPi                    #
# ========================================= #

[project]
name = "opendataval"
authors = [
    {name = "Kevin Jiang", email = "kfj2112@columbia.edu"},
    {name = "Weixin Liang", email = "wxliang@cs.stanford.edu"},
    {name = "James Zou", email = "jamesz@stanford.edu"},
    {name = "Yongchan Kwon", email = "yk3012@columbia.edu"},
]
description = "Transparent Data Valuation"
readme = "README.md"
requires-python = ">=3.9.0"
keywords = ["Data Valuation", "Data Centric", "Machine Learning"]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",

]
dependencies = [
    "geomloss~=0.2.6",
    "matplotlib~=3.7.1",
    "numpy~=1.24",
    "pandas~=2.0",
    "pandera~=0.15.1",
    "pykeops~=2.1.2",
    "requests~=2.31.0",
    "scipy~=1.10",
    "scikit-learn~=1.2",
    "torch~=2.0.0",
    "torcheval~=0.0.7",
    "torchvision~=0.15",
    "tqdm~=4.64",
    "transformers~=4.33.3",
    "typer~=0.9",

]
dynamic = ["version"]

[project.urls]
Documentation = "https://opendataval.github.io"
"Source code" = "https://github.com/opendataval/opendataval"

[project.scripts]
opendataval = "opendataval.__main__:cli"

[project.optional-dependencies]
dev = [
    "black~=22.10",
    "hatch~=1.7.0",
    "pip-tools~=6.13.0",
    "pre-commit~=3.4",
    "ruff~=0.0.275",
    "sphinx~=6.1"
]
test = [
    "pytest~=7.2.2",
    "pytest-cov~=4.0.0"
]

# ========================================= #
#                 Building                  #
# ========================================= #

[tool.hatch]
packages = ["opendataval"]

[tool.hatch.version]
path = "opendataval/__init__.py"

[tool.hatch.build]
include = [
  "opendataval/**/*.py",
  "test/**/*.py",
  "LICENSE.txt",
]

skip-excluded-dirs = true

# ========================================= #
#                  Linting                  #
# ========================================= #

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.ruff]
select = ["E", "F", "I", "C90", "RUF"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "E501"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
known-first-party = ["opendataval"]
known-third-party = [
    "numpy",
    "pandas",
    "pandera",
    "requests",
    "scipy",
    "sklearn",
    "matplotlib",
    "torch",
    "torchvision",
    "tqdm",
    "transformers",
    "typer",
]

# ========================================= #
#                  Testing                  #
# ========================================= #

[tool.coverage.run]
source = ["opendataval"]
omit = ["opendataval/model/*", "opendataval/dataloader/datasets/*"]

[tool.pytest.ini_options]
testpaths = ["test"]